# hexchat

./: .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .mailmap  fedora-mingw64.ini  meson.build  meson_options.txt  readme.md
.github/workflows/: flatpak-build.yml  msys-build.yml  ubuntu-build.yml  windows-build.yml
.tx/: config  howto.md
data/: hexchat.appdata.xml  hexchat.desktop  hexchat.gresource.xml  meson.build
data/icons/: meson.build
data/man/: hexchat.1.in  meson.build
data/misc/: io.github.Hexchat.Plugin.metainfo.xml.in  io.github.Hexchat.ThemeManager.desktop.in  io.github.Hexchat.ThemeManager.xml  io.github.Hexchat.appdata.xml.in  io.github.Hexchat.desktop.in.in  meson.build
data/pkgconfig/: hexchat-plugin.pc.in  meson.build
flatpak/: Load-plugins-from-Flatpak-extensions.patch  io.github.Hexchat.json  python3-cffi.json
osx/: Info.plist.in  gtk.css  gtkrc  hexchat.bundle  launcher.sh  makebundle.sh
plugins/: meson.build
plugins/checksum/: checksum.c  meson.build
plugins/exec/: exec.c  meson.build
plugins/fishlim/: LICENSE  dh1080.c  dh1080.h  fish.c  fish.h  irc.c  irc.h  keystore.c  keystore.h  meson.build  plugin_hexchat.c  utils.c  utils.h
plugins/fishlim/tests/: meson.build  mock-keystore.c  tests.c
plugins/lua/: lua.c  lua.vcxproj  lua.vcxproj.filters  meson.build
plugins/perl/: generate_header  generate_header.py  meson.build  perl.c
plugins/perl/lib/: HexChat.pm  IRC.pm  Xchat.pm
plugins/perl/lib/HexChat/: Embed.pm
plugins/perl/lib/HexChat/List/: Network.pm
plugins/perl/lib/HexChat/List/Network/: AutoJoin.pm  Entry.pm
plugins/python/: meson.build  python.py  python_style_guide.md
plugins/sysinfo/: format.c  format.h  meson.build  sysinfo-backend.h  sysinfo.c  sysinfo.h
plugins/sysinfo/osx/: backend.m
plugins/sysinfo/shared/: df.c  df.h
plugins/sysinfo/unix/: backend.c  match.c  match.h  parse.c  parse.h  pci.c  pci.h
plugins/sysinfo/win32/: backend.c
plugins/upd/: meson.build  upd.c
plugins/winamp/: meson.build  winamp.c
po/: LINGUAS  POTFILES  POTFILES.skip  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  (+18 more)
src/: meson.build  version-script
src/common/: cfgfiles.c  cfgfiles.h  chanopt.c  chanopt.h  ctcp.c  ctcp.h  dcc.c  dcc.h  fe.h  hexchat-plugin.h  hexchat.c  hexchat.h  hexchatc.h  history.c  history.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  marshalers.list  meson.build  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-identd.c  plugin-identd.h  plugin-timer.c  plugin-timer.h  plugin.c  plugin.h  proto-irc.c  proto-irc.h  scram.c  scram.h  (+17 more)
src/common/dbus/: dbus-client.c  dbus-client.h  dbus-plugin.c  dbus-plugin.h  example.c  example.py  meson.build  org.hexchat.service.service.in  remote-object.xml
src/common/sysinfo/: sysinfo.h
src/common/sysinfo/win32/: backend.c
src/dirent/: dirent-win32.h
src/fe-gtk/: ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  chanlist.h  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  editlist.h  fe-gtk.c  fe-gtk.h  fkeys.c  fkeys.h  gtk3-compat.h  gtkutil.c  gtkutil.h  ignoregui.c  joind.c  joind.h  maingui.c  maingui.h  menu.c  menu.h  meson.build  notifygui.c  notifygui.h  palette.c  palette.h  pixmaps.c  pixmaps.h  plugin-notification.c  plugin-notification.h  plugin-tray.c  plugin-tray.h  (+20 more)
src/fe-gtk/notifications/: notification-backend.h  notification-dummy.c  notification-freedesktop.c  notification-osx.m  notification-windows.c  notification-winrt.cpp  notifications-winrt.vcxproj  notifications-winrt.vcxproj.filters
src/fe-text/: fe-text.c  fe-text.h  meson.build
src/htm/: Program.cs  README.md  meson.build  thememan.in
src/htm/Properties/: AssemblyInfo.cs
win32/: config.h.tt  hexchat.exe.manifest  hexchat.props  version-template.ps1
win32/copy/: copy.vcxproj
win32/installer/: hexchat.iss.tt
