# Core options
option('plugin', type: 'boolean', value: true,
  description: 'Build with plugin support'
)

# Language bindings
option('with-lua', type: 'string', value: 'luajit',
  description: 'Lua implementation to use (luajit or lua)'
)
option('with-python', type: 'string', value: 'python3-embed',
  description: 'Python implementation to use'
)
option('with-perl', type: 'string', value: 'perl',
  description: 'Perl scripting plugin, value is path to perl executable or "false"'
)
option('perl-path', type: 'string', value: '',
  description: 'Custom path to Perl installation (e.g., /usr/share/perl5)'
)
option('with-perl-legacy-api', type: 'boolean', value: false,
  description: 'Enables the legacy IRC perl module for compatibility with old scripts'
)

# Features
option('with-tls', type: 'string', value: 'openssl',
  description: 'TLS backend to use (openssl, gnutls, or none)'
)
option('with-libcanberra', type: 'boolean', value: true,
  description: 'Build with libcanberra sound support (Unix only)'
)
option('with-dbus', type: 'boolean', value: true,
  description: 'Build with D-Bus support (Unix only)'
)

# Applications
option('gtk-frontend', type: 'boolean', value: true,
  description: 'Main graphical interface (GTK+)'
)
option('text-frontend', type: 'boolean', value: false,
  description: 'Text interface (not generally useful)'
)
option('theme-manager', type: 'boolean', value: false,
  description: 'Utility to help manage themes, requires mono/.net'
)

# Install options
option('dbus-service-use-appid', type: 'boolean', value: false,
  description: 'Rename dbus service to match app-id, required for Flatpak'
)
option('install-appdata', type: 'boolean', value: true,
  description: 'Install appdata files for app stores'
)
option('install-plugin-metainfo', type: 'boolean', value: false,
  description: 'Installs metainfo files for enabled plugins, useful when distros create split packages'
)

# Plugins
option('with-checksum', type: 'boolean', value: true,
  description: 'DCC checksum plugin'
)
option('with-exec', type: 'boolean', value: true,
  description: '/exec plugin, Windows only'
)
option('with-fishlim', type: 'boolean', value: true,
  description: 'Fish encryption plugin, requires openssl'
)
option('with-sysinfo', type: 'boolean', value: true,
  description: 'System information plugin, requires libpci on Unix'
)
option('with-upd', type: 'boolean', value: true,
  description: 'Update plugin, Windows only'
)
option('with-winamp', type: 'boolean', value: true,
  description: 'Winamp plugin, Windows only'
)
